--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         
         @media (max-width: 600px) {
             body { padding: 0.5rem; } .main-container { padding: 1rem; } 
-            .header h1 { font-size: 1.5rem; } /* Adjusted for single line title */
+            .header h1 { 
+                /* THIS IS THE FIX: A responsive font size */
+                font-size: clamp(1.3rem, 6vw, 1.7rem); 
+            }
             #image-preview-container { grid-template-columns: 1fr; } 
             .options-panel { flex-direction: column; gap: 0.8rem; }
             .modal-content { margin: 10% auto; } 
@@ -105,7 +108,6 @@
         </main>
     </div>
 
-    <!-- Developer Branding Footer -->
     <footer class="developer-branding">
         <a href="https://t.me/kundan_yadav_bot" target="_blank" style="display: flex;align-items: center;gap: 6px;background: #1a1a1a;padding: 6px 12px;border-radius: 12px;text-decoration: none;box-shadow: 0 4px 10px rgba(0,0,0,0.3);transition: all 0.3s ease;white-space: nowrap;">
             <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram" style="width: 18px;height: 18px;">
@@ -172,7 +174,6 @@
         const reduceBtn = document.getElementById('reduce-size-btn');
         let cropper;
         let currentEditingCard = null;
-
         const resizeModal = document.getElementById('resize-modal');
         const aspectLockButton = document.getElementById('aspect-lock-btn');
         const unitSelectors = resizeModal.querySelectorAll('.unit-selector');
