--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <script>
         function notifyParent(path) {
             // ZAROORI: Is URL ko apne asli Blogger URL se badlein
-            const blogUrl = 'https://AAPKE-BLOG-KA-URL.blogspot.com';
+            const blogUrl = 'https://babubhaikundan-tools.blogspot.com';
 
             // Aapki GitHub Pages 'tools' folder ke andar hai, isliye path ko sahi banate hain
             const fullPath = '/tools/' + path;
